deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rentar
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /metrics
    prometheus.io/port:   '80'
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  tls:
  - secretName: rentar-eu-tls
    hosts:
      - rentar.eu
      - api.rentar.eu
      - dashboard.rentar.eu
      - kibana.rentar.eu
      - grafana.rentar.eu
      - prometheus.rentar.eu
      - kafka-manager.rentar.eu
  rules:
  - host: api.rentar.eu
    http:
      paths:
      - path: /rentals
        backend:
          serviceName: rentar-rental
          servicePort: 9002
      - path: /cars
        backend:
          serviceName: rentar-fleet
          servicePort: 9001
      - path: /customers
        backend:
          serviceName: rentar-management
          servicePort: 9000
  - host: grafana.rentar.eu
    http:
      paths:
        - backend:
            serviceName: grafana
            servicePort: 3000
  - host: prometheus.rentar.eu
    http:
      paths:
        - backend:
            serviceName: prometheus
            servicePort: 9090
  - host: kafka-manager.rentar.eu
    http:
      paths:
        - backend:
            serviceName: kafka-manager
            servicePort: 9000
